Fix popup close button z-index

--- a/src/editor/blocks/popup-builder/styles/style.scss
+++ b/src/editor/blocks/popup-builder/styles/style.scss
@@ -67,7 +67,7 @@
 
     .guten-popup-close {
         position: absolute;
-        z-index: 99;
+        z-index: 999;
         color: var(--guten-txt-color);
         font-size: 15px;
         cursor: pointer;
